# simplestatistics changelog

## x.x.x

Date TBD

### Added

- `factorial()`
- `choose()`
- `binomial()` to calculate binomial distribution probabilities
- `normal()` to calculate normal distribution probabilities
- `kurtosis()` to calculate kurtosis/"tailedness" of a probability
distribution of a variable

### Improved

- Reorganized documentation.

### Improved

- 100% test coverage

## 0.1.3

2016-06-06

### Added

Functions for calculating correlation coefficients, products of vectors,
quantiles, and sums.

- `correlate()`
- `product()`
- `quantiles()`
- `sum()`